tests/fail/fail-printbig.mc
/* Should be illegal to redefine */
void printbig() {}
